--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     </div>
             </div>
 
-            <div class="carousel-item container-fluid d-lg-none p-5">
+            <div class="carousel-item container-fluid  p-5">
 
               <div class="row p-0">
                 <div class="col-12">
@@ -497,7 +497,7 @@
                     </div>
             </div>
 
-            <div class="carousel-item container-fluid d-lg-none p-5">
+            <div class="carousel-item container-fluid p-5">
 
               <div class="row p-0">
                 <div class="col-12">
@@ -521,7 +521,7 @@
                     </div>
             </div>
 
-            <div class="carousel-item container-fluid d-lg-none p-5">
+            <div class="carousel-item container-fluid  p-5">
 
               <div class="row p-0">
                 <div class="col-12">
