--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <section id="hamburger" class="container-fluid">
         <div class="row h-100">
             <div id="textoanimado">
-                <p style="margin-bottom: -30px;">SUA SEMANA MERECE UM</p>
+                <p style="margin-bottom: -20px;">SUA SEMANA MERECE UM</p>
                 <H1>LANCHE</H1>
-                <P style="margin-top: -30px;">DE RESPONSA</P>
+                <P style="margin-top: -20px;">DE RESPONSA</P>
               <a href="https://pedir.delivery/app/willyslanches/menu"> <button style="width: 40%; height: 80px;" type="button" class="fs-4 fs-1 btn btn-warning">PEDIR AGORA</button></a> 
             </div>
             <div style="filter: blur(2px); z-index: 9;" class="justify-content-center col p-0 ">
@@ -67,12 +67,12 @@
 
     </section>
 
-    <section id="info" class="container-fluid p-4 ">
-      <div class=" row h-100">
+    <section id="info" class="container-fluid p-2">
+      <div class=" row h-100 d-flex align-items-center">
         <div class="col-6 h-100 ">
-          <img style="height: 90%;" class="" src="./assets/logo.jpg" alt="" srcset="">
+          <img style="height: 80%;" class="" src="./assets/logo.jpg" alt="" srcset="">
         </div>
-        <div class="col-6 h-100 text-center fs-4 pt-5">
+        <div class="col-6 text-center fs-5 fs-lg-4 pt-2">
           <p> R. GASPAR SILVEIRA MARTINS, 693 - RINCÃO COMPRIDO</p>
           <p>CANDELÁRIA - RS</p>
         </div>
@@ -644,10 +644,10 @@
   </div>
 </section>
 
-<section class="container-fluid px-5">
-  <div  class="row text-center d-flex justify-content-center px">
-      <H5>LOCALIZAÇÃO</H5>
-    <div id="containermapa" class="col">
+<section class="container-fluid ps-2 pe-2 text-center">
+  <div  class="row  d-flex justify-content-center ">
+    <div class="col-12"> <H5 style="font-size: calc(30px + 2vw)">LOCALIZAÇÃO</H5></div> 
+    <div id="containermapa" class="col-12">
 
         <iframe class="responsive-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3466.374558333578!2d-52.78514032351742!3d-29.67991851447025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95034b1b54ef4243%3A0xd6400ad59d65447c!2sWilly&#39;s%20Lanches!5e0!3m2!1spt-BR!2sbr!4v1667939951563!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
