--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <P style="margin-top: -20px;">DE RESPONSA</P>
               <a href="https://pedir.delivery/app/willyslanches/menu"> <button style="width: 40%; height: 80px;" type="button" class="fs-4 fs-1 btn btn-warning">PEDIR AGORA</button></a> 
             </div>
-            <div style="filter: blur(2px); z-index: 9;" class="justify-content-center col p-0 ">
-                <img style="width: 100%;" src="./assets/hamburger.jpg" alt="" srcset="">
+            <div style="filter: blur(2px); z-index: 9;" class="justify-content-center col p-0 h-100">
+                <img style="width: 100%; min-height: 400px;" src="./assets/hamburger.jpg" alt="" srcset="">
             </div>
         </div>
 
@@ -69,8 +69,8 @@
 
     <section id="info" class="container-fluid p-2">
       <div class=" row h-100 d-flex align-items-center">
-        <div class="col-6 h-100 ">
-          <img style="height: 80%;" class="" src="./assets/logo.jpg" alt="" srcset="">
+        <div class="col-6 h-100 d-flex align-items-center">
+          <img style="height: 50%;  min-height: 150px;" class="" src="./assets/logo.jpg" alt="" srcset="">
         </div>
         <div class="col-6 text-center fs-5 fs-lg-4 pt-2">
           <p> R. GASPAR SILVEIRA MARTINS, 693 - RINCÃO COMPRIDO</p>
