--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-  <header class="container-fluid">
-    <nav class="navbar navbar-dark bg-dark fixed-top">
+  <header class="container-fluid p-0">
+    <nav class="navbar navbar-dark bg-dark ">
         <div class="container-fluid justify-content-start ps-5">
           <a class="hover navbar-brand d-none d-lg-flex mx-4" href="index.html">WILLY'S</a>
           <a class="hover navbar-brand d-none d-lg-flex mx-4" href="https://pedir.delivery/app/willyslanches/menu">PEDIR AGORA</a>
@@ -26,6 +26,8 @@
           <button  class="d-flex d-lg-none navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
+
+          
           <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title mx-auto" id="offcanvasDarkNavbarLabel">WILLYS</h5>
@@ -49,7 +51,7 @@
         </div>
       </nav>
   </header>
-  <main>
+
 
     <section id="hamburger" class="container-fluid">
         <div class="row h-100">
